# YimMenu

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  README.md
cmake/: README.md  async-logger.cmake  build_options.cmake  build_options_impl.cmake  cpr.cmake  gtav-classes.cmake  imgui.cmake  json.cmake  lua.cmake  minhook.cmake  pugixml.cmake
docs/lua/: commands.md  infraction.md  tabs.md
docs/lua/classes/: base_text_element.md  button.md  checkbox.md  gui_element.md  input_float.md  input_int.md  input_string.md  lua_patch.md  pointer.md  raw_imgui_callback.md  sameline.md  script_util.md  separator.md  tab.md  text.md  vec3.md
docs/lua/tables/: Global Table.md  ImGui.md  command.md  entities.md  event.md  globals.md  gui.md  io.md  locals.md  log.md  memory.md  menu_event.md  network.md  script.md  stats.md  tunables.md  vehicles.md  weapons.md
scripts/: README.md  bake_in_translations.py  generate_natives.py  lua_doc_gen.py  lua_natives_gen.py
src/: common.hpp  fiber_pool.cpp  fiber_pool.hpp  function_types.hpp  main.cpp  natives.hpp  pointers.cpp  pointers.hpp
src/backend/: float_command.cpp  player_command.cpp
src/backend/looped/self/: noclip.cpp  ptfx.cpp  super_hero_fly.cpp
src/backend/looped/vehicle/: rgb_paint.cpp  vehicle_ammo_special_type.cpp
src/backend/looped/weapons/: aimbot.cpp  flying_axe.cpp  gravity_gun.cpp  rapid_fire.cpp
src/core/: settings.hpp
src/core/data/: ipls.hpp
src/gta/: fidevice.cpp  net_game_event.hpp  sound.hpp
src/hooking/: call_hook.cpp  hooking.hpp
src/hooks/info/: prepare_metric_for_sending.cpp
src/hooks/misc/: http_start_request.cpp  log_message_error_box.cpp  start_matchmaking_find_sessions.cpp
src/hooks/player_management/: assign_physical_index.cpp
src/hooks/protections/: can_apply_data.cpp  receive_net_message.cpp  received_event.cpp  script_event_handler.cpp
src/hooks/spoofing/: send_player_card_stats.cpp  serialize_stats.cpp  write_player_gamer_data_node.cpp
src/hooks/toxic/: broadcast_net_array.cpp
src/invoker/: crossmap.hpp
src/logger/: logger.cpp
src/lua/bindings/: event.cpp  globals.cpp  gui.cpp  gui.hpp  locals.cpp  memory.cpp  network.cpp  script.cpp  vehicles.cpp  weapons.cpp
src/memory/: batch.hpp  byte_patch.hpp
src/native_hooks/: native_hooks.cpp
src/renderer/: font_mgr.cpp
src/services/api/: api_service.cpp
src/services/context_menu/: context_menu_service.cpp  context_menu_service.hpp
src/services/creator_storage/: creator_storage_service.cpp
src/services/gta_data/: gta_data_service.cpp  yim_fipackfile.cpp
src/services/hotkey/: hotkey_service.cpp
src/services/matchmaking/: matchmaking_service.cpp
src/services/model_preview/: model_preview_service.cpp
src/services/player_database/: player_database_service.cpp
src/services/players/: player.cpp
src/services/script_connection/: script_connection.cpp
src/services/script_patcher/: script_patch.hpp
src/services/squad_spawner/: squad_spawner.cpp  squad_spawner_actions.cpp
src/services/tunables/: tunables_service.cpp
src/services/vehicle/: persist_car_service.cpp  vehicle_control_service.cpp  vehicle_control_service.hpp  xml_vehicles_service.cpp
src/services/xml_maps/: xml_map_service.cpp
src/util/: animations.hpp  chat.hpp  entity.cpp  entity.hpp  env.hpp  fuzzer.hpp  globals.hpp  is_wine.hpp  notify.cpp  pathfind.hpp  ped.hpp  session.hpp  strings.hpp  sync_trees.hpp  term.hpp  toxic.hpp  wine.hpp
src/views/: view_vehicle_control.cpp
src/views/debug/: view_debug_globals.cpp  view_debug_locals.cpp  view_debug_script_events.cpp  view_debug_threads.cpp
src/views/network/: view_network.cpp  view_player_database.cpp  view_session_browser.cpp  view_spoofing.cpp
src/views/players/: view_player.cpp
src/views/self/: view_animations.cpp  view_custom_teleport.cpp  view_mobile.cpp  view_outfit_editor.cpp  view_self.cpp  view_weapons.cpp
src/views/settings/: view_hotkey_settings.cpp  view_lua_scripts.cpp  view_proxy_settings.cpp  view_stat_editor.cpp
src/views/vehicle/: view_fun_vehicle.cpp  view_spawn_vehicle.cpp  view_vehicle.cpp
src/views/world/: view_gravity.cpp  view_model_swapper.cpp  view_spawn_ped.cpp  view_squad_spawner.cpp  view_world.cpp
src/widgets/: imgui_hotkey.hpp
(+26 files in other folders)
